--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "check-tool-names:langchain": "tsx scripts/check-langchain-tool-duplicates.ts"
   },
   "engines": {
-    "node": ">=22.0.0",
-    "pnpm": ">=8.0.0"
+    "node": ">=22.0.0"
   },
   "keywords": [
     "solana",
